# FLP-Haskell-Project

./: AI.md  README.md  cabal.project  dummy-interpreter.py  dummy-parser.py  flp-fun.cabal
app/: Main.hs
example_sol_tests/: ex1.test  ex10.out  ex10.test  ex11.out  ex11.test  ex2.test  ex3.test  ex4.test  ex5.test  ex6.out  ex6.test  ex7.out  ex7.test  ex8.test  ex9.test  expected_output.json
src/SOLTest/: CLI.hs  Discovery.hs  Executor.hs  Filter.hs  JSON.hs  Parser.hs  Report.hs  Types.hs
test/: Spec.hs
test/SOLTest/: FilterSpec.hs  Generators.hs  ParserSpec.hs  ReportSpec.hs
